--- a/webapp/source/index.html
+++ b/webapp/source/index.html
@@ -21,6 +21,7 @@
             <div class="jumbotron">
                 <h1>Lafete</h1>
                 <p>Welcome to our Event Managing Website.</p>
+                <p>Back to <a href="/events">Event Overview</a></p>
             </div>
             <div ng-view=""></div>
         </div>
