--- a/webapp/source/index.html
+++ b/webapp/source/index.html
@@ -23,7 +23,9 @@
                 <p>Welcome to our Event Managing Website.</p>
                 <p>Back to <a href="/events">Event Overview</a></p>
             </div>
-            <div ng-view=""></div>
+            <div class="events-container col col-lg-6 col-lg-offset-3 col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1 col-xs-12 col-xs-offset-0">
+                <div ng-view=""></div>
+            </div>
         </div>
 	</body>
 </html>
